kube/gcp/task/task-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: task-service
  namespace: chunkmydocs
  labels:
    app.kubernetes.io/name: task
  annotations:
    cloud.google.com/backend-config: '{"default": "task-backendconfig"}'
spec:
  selector:
    app.kubernetes.io/name: task
  type: ClusterIP
  ports:
  - port: 3000
    targetPort: 3000
    protocol: TCP
